--- a/thot-ui/package.json
+++ b/thot-ui/package.json
@@ -22,13 +22,13 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "22.4.2",
-    "object-assign": "4.1.1",
+    "object-assign": "^4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
-    "react-bootstrap": "^0.32.3",
+    "react-bootstrap": "0.32.3",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
@@ -62,7 +62,7 @@
     "@types/classnames": "^2.2.6",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
-    "@types/react": "^16.4.11",
+    "@types/react": "^16.9.3",
     "@types/react-dom": "^16.0.7",
     "classnames": "^2.2.6",
     "node-sass": "^4.9.3",
